--- a/OnlineShop/appsettings.json
+++ b/OnlineShop/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Sql": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\Identity\\local_db.mdf;Integrated Security=True;Connect Timeout=30"
+    "Sql": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\Identity\\latest_db.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
